--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -57,4 +57,5 @@ messages:
   error-world-load: "  &c目标世界加载失败，请稍后再试~"
   error-invalid-gamemode: "  &c当前游戏模式下无法使用贴贴魔法呢~"
   error-plugin-disabled: "  &c贴贴系统正在休息，请稍后再来~"
-  error-data-corrupted: "  &c啊哦！你的贴贴数据似乎出了点问题..." 
+  error-data-corrupted: "  &c啊哦！你的贴贴数据似乎出了点问题..."
+  being-peeked-actionbar: "&d当前有 &f{count} &d个玩家正在贴贴你" 
