--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -10,55 +10,32 @@ messages:
   not-peeking: "  &d你现在没有施展任何贴贴魔法呢~"
   peek-end: "  &d✨ 魔法消散了，已经回到自己的视角啦~"
   target-offline: "  &d糟糕！目标玩家下线了，魔法自动解除啦~"
-  time-expired: "  &d时间到啦！魔法效果已经消失了呢~"
   being-peeked: "  &d✨ 魔法提醒：&f{player} &d正在通过魔法贴贴你哦~"
   cooldown-peek: "  &d魔力还在恢复中，再等 &f{time} &d秒就能再次施法啦~"
   stats-self: "  &d✨ 你的魔法记录：\n&d➤ 施法次数：&f{peek_count} &d次\n&d➤ 被贴贴次数：&f{peeked_count} &d次\n&d➤ 总施法时长：&f{peek_duration} &d分钟"
-  target-no-permission: "  &d这位玩家开启了防窥魔法护盾，暂时无法贴贴呢~"
   command-error: "  &c糟糕！魔法出现了意外，快去找管理员帮忙吧！"
   teleport-failed: "  &c哎呀！返回原位置时出了点小问题，重新试试看吧~"
   stats-disabled: "  &c魔法记录功能现在处于休眠状态哦~"
-  too-many-observers: "  &d这位玩家已经被太多魔法师关注啦，等会儿再来吧~"
   peek-end-target: "  &d✨ 魔法师 &f{player} &d结束了对你的贴贴~"
   peek-end-offline: "  &d✨ 检测到你上次贴贴时意外断开连接，已经帮你恢复原来的状态啦~"
-  different-dimension: "  &d魔法似乎无法跨越维度的界限呢~"
   range-exceeded: "  &d你离目标太远了，贴贴魔法已经自动解除~"
   privacy-mode-enabled: "  &d私人模式已 &a&l启用"
   privacy-mode-disabled: "  &d私人模式已 &c&l禁用"
-  peek-request: "  &d玩家 &f{player} &d请求和你贴贴"
+  peek-request: "&d✨ &f{player} &d想要和你贴贴，输入 &f/peek accept &d接受，或 &f/peek deny &d拒绝"
   request-already-pending: "  &c该玩家已有一个待处理的请求"
   request-timeout: "  &c请求已超时"
   request-timeout-target: "  &c贴贴请求已超时"
   request-denied: "  &c对方拒绝了你的贴贴请求"
   no-pending-request: "  &c没有待处理的贴贴请求"
-  request-expired: "  &c该请求已过期"
-  request-sent: "  &d已成功向玩家 &f{player} &d发送贴贴请求"
+  request-expired: "&d贴贴请求已过期，需要重新发送哦~"
+  request-sent: "&d✨ 已向 &f{player} &d发送贴贴请求，等待回应中..."
   target-is-peeking: "  &d这位魔法师正在贴贴别人呢，等他结束后再来吧~"
-  target-being-peeked: "  &d这位魔法师已经被太多人贴贴啦，等会儿再来试试吧~"
   target-in-different-world: "  &d目标魔法师在另一个世界呢，让我带你过去~"
-  state-restore-start: "  &d✨ 正在恢复你之前的状态，请稍等..."
-  state-restore-success: "  &d✨ 状态恢复成功！欢迎回来~"
-  state-restore-failed: "  &c糟糕！状态恢复失败了，请联系管理员处理..."
-  teleport-start: "  &d✨ 正在施展传送魔法..."
-  teleport-success: "  &d✨ 传送成功！开始贴贴吧~"
-  teleport-failed-retry: "  &c传送失败了，再试一次..."
   teleport-failed-spawn: "  &c无法返回原位置，已将你传送到重生点~"
-  target-no-peek-permission: "  &d这位魔法师设置了防窥魔法护盾，暂时无法贴贴呢~"
-  peek-mode-restored: "  &d已恢复到之前的游戏模式啦~"
   request-accept-success: "  &d✨ 已接受 &f{player} &d的贴贴请求~"
   request-deny-success: "  &d已拒绝 &f{player} &d的贴贴请求~"
   request-cancel: "  &d贴贴请求已被取消~"
   request-received-hint: "  &d使用 &f/peek accept &d接受，或 &f/peek deny &d拒绝~"
   stats-peek-record: "  &d→ 最长单次贴贴时长：&f{longest_duration} &d分钟"
   stats-target-record: "  &d→ 最常贴贴的玩家：&f{most_peeked_player}"
-  system-saving-state: "  &d正在保存你的状态..."
-  system-state-saved: "  &d状态已保存，下次上线会自动恢复哦~"
-  system-cleanup: "  &d系统清理了一些过期的贴贴记录~"
-  error-world-load: "  &c目标世界加载失败，请稍后再试~"
-  error-invalid-gamemode: "  &c当前游戏模式下无法使用贴贴魔法呢~"
-  error-plugin-disabled: "  &c贴贴系统正在休息，请稍后再来~"
-  error-data-corrupted: "  &c啊哦！你的贴贴数据似乎出了点问题..."
   being-peeked-actionbar: "&d当前有 &f{count} &d个玩家正在贴贴你"
-  privacy-request-sent: "&d✨ 已向 &f{player} &d发送贴贴请求，等待回应中..."
-  privacy-request-received: "&d✨ &f{player} &d想要和你贴贴，输入 &f/peek accept &d接受，或 &f/peek deny &d拒绝"
-  privacy-request-expired: "&d贴贴请求已过期，需要重新发送哦~"
