可以原地peek自己

--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -4,7 +4,7 @@ messages:
   prefix: ""
   command-player-only: "  &dThis feature can only be used by players!"
   no-permission: "  &dSorry, but you don't have permission to do this!"
-  usage: "  &dGuidance: \n&d➤ &f/peek <player> &7Peek player\n&d➤ &f/peek exit &7Exit Peek Mode\n&d➤ &f/peek stats &7Get the statistics\n&d➤ &f/peek privacy &7Turn on/off Privacy Mode\n&d➤ &f/peek accept &7Accept Peek request(s)\n&d➤ &f/peek deny &7Deny Peek request(s)"
+  usage: "  &dGuidance: \n&d➤ &f/peek <player> &7Peek player\n&d➤ &f/peek self &7Enable spectator mode in place\n&d➤ &f/peek exit &7Exit Peek Mode\n&d➤ &f/peek stats &7Get the statistics\n&d➤ &f/peek privacy &7Turn on/off Privacy Mode\n&d➤ &f/peek accept &7Accept Peek request(s)\n&d➤ &f/peek deny &7Deny Peek request(s)"
   already-peeking: "  &dYou're already peeking someone else，Type &f/peek exit &dto exit."
   player-not-found: "  &dCan't find the player &f{player} &d, Is there a typo in the name?"
   cannot-peek-self: "  &dYou can't peek yourself!"
@@ -45,3 +45,6 @@ messages:
   request-cancelled-death-target: "  &dThe other player has died, and the peek request has been automatically canceled."
   cannot-peek-while-dead: "&cYou can't use peek feature when you died."
   peek-end-respawn: "&aYou have respawned, your peek state has been restored~"
+  self-peek-start: "  &d✨ Self-peek mode activated! You can now explore freely, remember to use &f/peek exit &dto exit spectator mode~"
+  self-peek-range-exceeded: "  &dYou are too far from your original position, self-peek mode has been automatically ended~"
+  self-peek-world-changed: "  &dDetected world change, self-peek mode has been automatically ended~"
