修复bypass，新增随机模式，bossbar指示条

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -2,7 +2,7 @@ messages:
   prefix: ""
   command-player-only: "  &d这个魔法只能由玩家施展哦~"
   no-permission: "  &d抱歉，你还没有获得使用这个魔法的权限呢~"
-  usage: "  &d施法指南：\n&d➤ &f/peek <玩家名> &7贴贴指定玩家\n&d➤ &f/peek self &7在原地开启观察者模式\n&d➤ &f/peek exit &7退出贴贴模式\n&d➤ &f/peek stats &7查看贴贴统计\n&d➤ &f/peek privacy &7切换私人模式\n&d➤ &f/peek accept &7接受贴贴请求\n&d➤ &f/peek deny &7拒绝贴贴请求"
+  usage: "  &d施法指南：\n&d➤ &f/peek <玩家名> &7贴贴指定玩家\n&d➤ &f/peek random &7随机贴贴一个玩家\n&d➤ &f/peek self &7在原地开启观察者模式\n&d➤ &f/peek exit &7退出贴贴模式\n&d➤ &f/peek stats &7查看贴贴统计\n&d➤ &f/peek privacy &7切换私人模式\n&d➤ &f/peek accept &7接受贴贴请求\n&d➤ &f/peek deny &7拒绝贴贴请求"
   already-peeking: "  &d你已经在贴贴别人了呢，输入 &f/peek exit &d解除魔法吧~"
   player-not-found: "  &d咦？找不到玩家 &f{player} &d呢，是不是拼错名字啦？"
   cannot-peek-self: "  &d自己贴贴自己？这可不行呢，试试贴贴别人吧！"
@@ -46,3 +46,5 @@ messages:
   self-peek-start: "  &d✨ 自我观察模式已启动！你现在可以自由探索，记得用 &f/peek exit &d退出观察模式~"
   self-peek-range-exceeded: "  &d你离原位置太远了，自我观察模式已自动结束~"
   self-peek-world-changed: "  &d检测到你切换了世界，自我观察模式已自动结束~"
+  random-peek-selected: "  &d✨ 随机选中了 &f{player}&d，正在施展贴贴魔法~"
+  no-available-random-target: "  &d当前没有可以随机贴贴的玩家呢，大家都在私密模式或者不在线~"
